--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -26,5 +26,28 @@ img {
 }
 
 .container {
+  /* border: 1px solid violet; */
   display: flex;
+  flex-direction: column;
+}
+
+.top {
+  display: flex;
+  justify-content: center;
+}
+
+.images {
+  /* border: 1px solid green; */
+  display: flex;
+  gap: 52px;
+  padding: 25px;
+  align-items: center; 
+}
+
+.b1, .b2, .b3, .b4 {
+  /* border:1px solid green; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
