--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,69 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-  height: 72px;
+  max-height: 72px;
   background: darkmagenta;
   color: white;
+  padding: 12px 24px;
+  display: flex;
+  align-content: center;
+  font-weight: 1000;
+  font-size: 25px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  content: #9734 ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
-  width: 300px;
+  max-width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
+  flex: 1;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 200px;
+  height: 200px;
 }
+.cards {
+  display: flex;
+  
+  justify-content: center;
+  align-items: center;
+  border: 1px solid ;
+  flex-wrap: wrap;
+  padding: 12px 24px;
+}
+
+a{
+  text-decoration: none;
+  color: #eee;
+  font-size: 24px;
+;
+}
+
+ul {
+  margin: 0;
+  padding: px;
+  gap: px;
+  list-style: none;
+  flex:1;
+
+}
+
